[gd_scene load_steps=10 format=3 uid="uid://ciy7tco6egwyl"]

[ext_resource type="Script" path="res://menu.gd" id="1_v1uht"]
[ext_resource type="Shader" path="res://menu.gdshader" id="2_coc8g"]
[ext_resource type="Texture2D" uid="uid://cigyvsnfp0j6c" path="res://assets/ui/Setting menu.png" id="3_sidlp"]
[ext_resource type="Theme" uid="uid://83edle7dd1l6" path="res://assets/ui/menu.tres" id="4_so1m0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xwvj"]
shader = ExtResource("2_coc8g")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_dan52"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="Animation" id="Animation_xiq4e"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="Animation" id="Animation_3sbc8"]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bhgq"]
_data = {
"RESET": SubResource("Animation_dan52"),
"blur": SubResource("Animation_xiq4e"),
"transition": SubResource("Animation_3sbc8")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1uht")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0xwvj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingMenu" type="Sprite2D" parent="."]
position = Vector2(570, 322.442)
scale = Vector2(3.36434, 3.56169)
texture = ExtResource("3_sidlp")

[node name="Resume" type="Button" parent="."]
layout_mode = 2
offset_left = 445.0
offset_top = 224.884
offset_right = 690.0
offset_bottom = 280.884
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_so1m0")
text = "Resume"

[node name="Restart" type="Button" parent="."]
layout_mode = 2
offset_left = 446.0
offset_top = 287.884
offset_right = 690.0
offset_bottom = 343.884
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_so1m0")
text = "Restart"

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 353.884
offset_right = 689.0
offset_bottom = 405.884
theme = ExtResource("4_so1m0")
text = "Settings"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 445.0
offset_top = 414.884
offset_right = 689.0
offset_bottom = 471.884
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_so1m0")
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 484.0
offset_top = 191.0
offset_right = 728.0
offset_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7bhgq")
}

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
